--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -33,7 +33,7 @@
         echo  "<div style='font-weight: bold;'>" . $this->razao_social . " </div> <br> \n";
         echo $this->rua . " " . $this->numero. " " . $this->complemento . " " . $this->bairro . " <br> \n";
         echo "Telefone 1: " . $this->telefone1 . " Telefone 2 : " . $this->telefone2 . " <br> \n";
-        echo "email: " . $this->email . " <br> \n";	echo " </div>  \n";
+        echo "email: " . $this->email . " <br> \n";	
         echo $this->website . " <br> \n";	echo " </div>  \n";
         
 
