--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -37,7 +37,7 @@
         <form action="/portal/index/consulta" method="post" class="" id='form1'>
 
             <h1>Entre com os critérios de pesquisa por favor. Você pode procurar por ingredientes específicos, lugares, pratos ou 
-            qualquer outro critério disponível para te trazer a opção mais certa para você!</h1> 
+            qualquer outro critério disponível para trazer a opção mais certa para você!</h1> 
 
             <div style="text-align: left; border: transparent; width: 380px; ">
                  <p class="lead">Aqui você pode digitar qualquer termo para sua consulta:</p>
