--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/index.phtml
@@ -14,15 +14,9 @@
 
 		<div class="container-topo">
 			<div id="titulos">
-				<img src="<?php echo $this->baseUrl("/img/subway.jpg")?>" >
-				<h1>Bem-vindo(a), <i>Christian Pior</i> - <small><a href="/estabelecimento/auth/logout">(sair)</a></small></h1>
+				
+				<h1>Bem-vindo(a), <i> <?php echo $this->responsavel;  ?> </i> - <small><a href="/estabelecimento/auth/logout">(sair)</a></small></h1>
 
-			</div>
-			<div id="infos">
-				<img id="faturamento" src="<?php echo $this->baseUrl("/img/Coins.png")?>">
-				<span>Faturamento de Hoje: <b>R$ 6,66</b></span><br />
-				<span><a href="#">Histórico de faturamentos</a></span>
-				<b class="botao">Agendar Recebimento</b>
 			</div>
 		</div>
 
@@ -104,15 +98,10 @@
 
 	<div id="footer">
 		<ul>
-			<li><a>Rodapé</a></li>
+			
 			<li><a>Atendimento online</a></li>
 			<li><a>Tutoriais</a></li>
-			<li><a>Rodapé</a></li>
-			<li><a>Atendimento online</a></li>
-			<li><a>Tutoriais</a></li>
-			<li><a>Rodapé</a></li>
-			<li><a>Atendimento online</a></li>
-			<li><a>Tutoriais</a></li>
+			
 		</ul>
 	</div>
 
