--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -1,8 +1,31 @@
+<?php
+$this->headMeta()->appendHttpEquiv('Content-Type', 'text/html;charset=utf-8');
+$this->headTitle()->setSeparator(' - ');
+
+ ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-</head>
+<?php echo $this->headMeta(); ?>
+<title><?php echo $this->pageTitle;?></title>
+<link type="text/css" href="<?php echo $this->baseUrl() ?>/js/jui/css/pepper-grinder/jquery-ui-1.8.9.custom.css" rel="stylesheet" />
+<link type="text/css" href="<?php echo $this->baseUrl() ?>/css/style.css" rel="stylesheet" />
+<link type="text/css" href="<?php echo $this->baseUrl() ?>/css/portal.css" rel="stylesheet" />
+<!-- Bootstrap core CSS -->
+	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	
+	<!-- Bootstrap theme -->
+	<link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+
+
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jui/js/jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/validation-new.js"></script>
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/common.js"></script>
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jquery.cookie.js"></script>
+
 
 <body>
     
